# ctip

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  baza_CTIP  collector_full.py  collector_fullwork.py  collector_service.py  conect_sli.py  ctip_sniff.py  ctiptest  db_probe.py  log_utils.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  run_collector_tmux.sh  run_stack_tmux.sh  run_test_stack_tmux.sh  sms_sender.py  sms_sender.sh  stop_stack_tmux.sh  web_viewer.py
.codex/: session.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 15989372b89d_add_auto_ivr_sms_mapping.py  27b84e77c2a0_add_mobile_phone_admin_user.py  2a3e1f8b0869_add_firebird_id_contact.py  7615e8207b7a_init_ctip_schema.py  b446620b9fe5_merge_admin_and_contact_revisions.py  e0ea7dc108d6_sms_data_extensions.py  fa1d0aa9a3c2_admin_module_basics.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  router.py
app/core/: __init__.py  config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  admin.py  base.py  call.py  call_event.py  contact.py  ivr_map.py  sms_out.py  sms_template.py
app/schemas/: __init__.py  admin.py  admin_contacts.py  admin_ctip.py  call.py  contact.py  (+2 more)
prototype/: index.html
tests/: test_admin_backend.py  test_admin_ui.py  test_api_auth.py  test_collector_context.py  test_conect_sli.py  test_db_schema.py  test_handshake.py  test_model_timezones.py  test_operator_templates.py  test_raport_static.py  test_schema_validation.py  test_sms_provider.py  test_sms_schema.py
(+91 files in other folders)
