[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]

[tool.ruff.lint]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # linie >100 znaków – Black i tak je złamie
fix = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
