[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # linie >100 znaków – Black i tak je złamie

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
