[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # linie >100 znaków – Black i tak je złamie

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ctip"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "SQLAlchemy>=2.0.30,<2.1.0",
  "asyncpg>=0.29.0,<0.30.0",
  "pydantic-settings>=2.2.1,<2.3.0",
  "python-dotenv>=1.0.1,<1.1.0",
  "cryptography>=43.0.0,<44.0.0",
  "aiosqlite>=0.19.0,<0.20.0"
]

[tool.setuptools]
packages = ["app"]
